fix: spacing issues

--- a/static/tailwind.css
+++ b/static/tailwind.css
@@ -4331,6 +4331,9 @@ details.collapse summary::-webkit-details-marker {
 .mb-\[14px\] {
   margin-bottom: 14px;
 }
+.mb-\[21px\] {
+  margin-bottom: 21px;
+}
 .mb-\[22px\] {
   margin-bottom: 22px;
 }
@@ -4633,6 +4636,9 @@ details.collapse summary::-webkit-details-marker {
 }
 .max-h-16 {
   max-height: 4rem;
+}
+.max-h-5 {
+  max-height: 1.25rem;
 }
 .max-h-\[110px\] {
   max-height: 110px;
@@ -6074,6 +6080,9 @@ details.collapse summary::-webkit-details-marker {
   -o-object-position: top;
      object-position: top;
 }
+.\!p-0 {
+  padding: 0px !important;
+}
 .p-0 {
   padding: 0px;
 }
@@ -6184,6 +6193,10 @@ details.collapse summary::-webkit-details-marker {
   padding-left: 4.61px;
   padding-right: 4.61px;
 }
+.px-\[40px\] {
+  padding-left: 40px;
+  padding-right: 40px;
+}
 .py-0 {
   padding-top: 0px;
   padding-bottom: 0px;
@@ -6244,6 +6257,10 @@ details.collapse summary::-webkit-details-marker {
   padding-top: 2rem;
   padding-bottom: 2rem;
 }
+.py-\[28px\] {
+  padding-top: 28px;
+  padding-bottom: 28px;
+}
 .py-\[2px\] {
   padding-top: 2px;
   padding-bottom: 2px;
@@ -6298,11 +6315,11 @@ details.collapse summary::-webkit-details-marker {
 .pb-8 {
   padding-bottom: 2rem;
 }
-.pb-\[14px\] {
-  padding-bottom: 14px;
-}
 .pb-\[15px\] {
   padding-bottom: 15px;
+}
+.pb-\[30px\] {
+  padding-bottom: 30px;
 }
 .pb-\[66px\] {
   padding-bottom: 66px;
@@ -6358,6 +6375,9 @@ details.collapse summary::-webkit-details-marker {
 .pt-20 {
   padding-top: 5rem;
 }
+.pt-3 {
+  padding-top: 0.75rem;
+}
 .pt-36 {
   padding-top: 9rem;
 }
@@ -6378,6 +6398,9 @@ details.collapse summary::-webkit-details-marker {
 }
 .pt-\[45px\] {
   padding-top: 45px;
+}
+.pt-\[50px\] {
+  padding-top: 50px;
 }
 .text-left {
   text-align: left;
@@ -6576,6 +6599,9 @@ details.collapse summary::-webkit-details-marker {
 .leading-\[20px\] {
   line-height: 20px;
 }
+.leading-\[20x\] {
+  line-height: 20x;
+}
 .leading-\[22\.4px\] {
   line-height: 22.4px;
 }
@@ -6600,14 +6626,11 @@ details.collapse summary::-webkit-details-marker {
 .leading-\[35px\] {
   line-height: 35px;
 }
-.leading-\[46px\] {
-  line-height: 46px;
-}
-.leading-\[48px\] {
-  line-height: 48px;
-}
 .leading-\[49px\] {
   line-height: 49px;
+}
+.leading-\[60px\] {
+  line-height: 60px;
 }
 .leading-\[9\.9px\] {
   line-height: 9.9px;
@@ -7070,7 +7093,7 @@ details.collapse summary::-webkit-details-marker {
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   transition-timing-function: cubic-bezier(0, 0, 0.2, 1);
   transition-duration: 300ms;
-  top: 0.9rem;
+  top: 20px;
   inset-inline-end: 1.4rem;
   content: "+";
   pointer-events: none;
