--- a/tailwind.css
+++ b/tailwind.css
@@ -113,7 +113,7 @@
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   transition-timing-function: cubic-bezier(0, 0, 0.2, 1);
   transition-duration: 300ms;
-  top: 0.9rem;
+  top: 20px;
   inset-inline-end: 1.4rem;
   content: "+";
   pointer-events: none;
